--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
     <!--Section 1 header-->
     <header class="header">
         <div class="container">
-        <a class="logo header__logo link" href="./index.html">Web<span class="logo__text--right">Studio</span></a>
+        <a class="logo header__logo link" href="./index.html">Web<span class="header__logo-text--right">Studio</span></a>
             <nav class="navigation">
                 <ul class="menu-list__list list">
                     <li class="menu-list__item"><a class="menu-list__link link" href="./index.html">Студия</a></li>
@@ -201,7 +201,7 @@
         <div class="container">
             <div class="footer-wrap">
                 <div class="footer-info">
-                    <a class="logo footer-info__logo link" href="./index.html">Web<span class="logo__text--right-white">Studio</span></a>
+                    <a class="logo footer__logo link" href="./index.html">Web<span class="footer__logo-text--right-white">Studio</span></a>
                     <address>
                         <ul class="footer-list list">
                             <li class="footer-list__item"><a href="https://goo.gl/maps/JQPirbtN8Ry6AJ1e7" target="_blank"
